src/style.css
.gifresults {
	margin: 10px 0;
	max-height: 400px;
	overflow: auto;
}
.gifresults img {
	width: 100%;
	display: block;
	height: auto;
	margin: 0 0 10px 0;
}
.temptext {
	opacity: .5;
}
.gif-navigation {
	display: grid;
	grid-template-columns: 45% 45%;
	grid-gap: 5%;
}
.gif-navigation button,
.centercontent {
	text-align: center;
	display: block;
}
.gg-gif-block .alignfull,
.gg-gif-block .alignfull .components-resizable-box__container,
.gg-gif-block .alignfull > figure {
	width: 100%!important;
	max-width: 100%!important;
	margin-left: auto!important;
	margin-right: auto!important;
	height: auto!important;
}
.gg-gif-block .aligncenter {
	margin-left: auto!important;
	margin-right: auto!important;
}
.gg-gif-block .components-resizable-box__container figure {
	width: 100%!important;
}
/*.wp-block-image.gg-gif-block figcaption span:nth-child(1) {
	float: left;
}
.wp-block-image.gg-gif-block figcaption span:nth-child(2) {
	float: right;
}*/
.powered-by {
    background-image: url('./PB_tenor_logo_blue_horizontal.png');
    background-repeat: no-repeat;
    background-size: contain;
    background-position: right;
    height: 15px;
    text-indent: -999px;
    overflow: hidden;
    margin-bottom: -15px;
}
.undo-gif {
	margin-top: 10px;
	display: block;
	width: 100%;
}
/*.gg-gif-block figure {
	display: flex!important;
	flex-direction: column;
}*/
.gg-gif-block .alignnone {
	display: table;
}
.gg-gif-block figure img {
	width: 100%!important;
}
.gg-gif-block .alignnone > figcaption {
    display: table-caption;
    caption-side: bottom;
}
.nokey {
	font-style: italic;
}
.nogif {
	opacity: .5;
}
.gg-gif-block.alignleft,
.gg-gif-block.alignright {
	float:none!important;
}
.gg-gif-block .components-resizable-box__container,
.gg-gif-block figure {
	max-width: 100%;
}
.gg-gif-block figure > div {
	width: 100%;
}
.gg-gif-block .alignwide {
	width: 100vw!important;
	max-width: 100vw!important;
	position: relative;
	left: 50%;
	right: 50%;
	margin-left: -50vw;
	margin-right: -50vw;

}
.gg-gif-block .alignwide .components-resizable-box__container,
.gg-gif-block .alignwide > figure {
	width: 100%!important;
	margin-left: 0!important;
	margin-right: 0!important;
	height: auto!important;
}

